chapter10/canary/quotes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
  labels:
    app: back
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: back
